????-??-?? Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_06
* Fix test error on 5.8.8 (reported by Wei Wang)
* Added '--list', '-L' to list available cluster tags (idea from Markus Manzke)
* Fix terminal size only set on last windows (Sf bug 3061999)

2010-06-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_05

* Tidy up pod for whatis errors
* Amend copyright years and text to be consistent
* Include missing buld prereq (Test::Trap)
* Correct '--font, -f' in cssh documentation
- Thanks to Tony Mancill for reporting these errors

2010-06-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_04

* Update MANIFEST file to ensure all correct files are included in release

2010-06-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_03

* Fix silly type in code/tests

2010-06-19 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_02

* Add in bugtracker and homepage resources to Build.PL file
* Bring new module App::ClusterSSH::Host into play for parsing host strings
* Patch to override font used on command line (Roland Rosenfeld)
* Put options in cssh pod into alphabetical order

2010-01-08 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_01

* Remove GNU tools and switch to Perl module layout using Module::Build

0000-00-00 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.29 - unreleased

* Handle hostnames containing % properly (Debian bug  543368)
- Thanks to Tony Mancill for the patch

2009-12-19 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.28

* Look for usernames when adding clusters
- Thanks to Kristian Lyngstol for the patch
* Allow username@cluster to override all usernames in the cluster
* Account for multiple host definitions within ssh configuration file
- Thanks to anonymous for the patch
* Allow for long line continuation in config files with a backslash
- Thanks to Mike Loseke for the patch
* Improve binary search to 
  - ignore directories of the same name, and 