@@ -2,6 +2,7 @@
 * Fix test error on 5.8.8 (reported by Wei Wang)
 * Added '--list', '-L' to list available cluster tags (idea from Markus Manzke)
 * Fix terminal size only set on last windows (Sf bug 3061999)
+* Added '--use_all_a_records' (Simon Fraser)
 
 2010-06-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_05
 
